--- a/ave_norm_xs.ipynb
+++ b/ave_norm_xs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "9"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,22 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.06452816485039338\n",
-      "905.2665857838962\n",
-      "9.803737690221416\n",
-      "0.32245999311658796\n",
-      "0.9913410944182741\n",
-      "48.40257300524878\n",
-      "0.9031797429032478\n",
-      "31.025039302854324\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0.06452816485039338,\n",
+       " 905.2665857838962,\n",
+       " 9.803737690221416,\n",
+       " 0.32245999311658796,\n",
+       " 0.9913410944182741,\n",
+       " 48.40257300524878,\n",
+       " 0.9031797429032478,\n",
+       " 31.025039302854324]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,7 +127,45 @@
     "    f3=UnivariateSpline(energynew,countsnew) \n",
     "    inte_phi = f3.integral(energynew[0],energynew[len(energynew)-1])\n",
     "    norm_ave_xs = inte_phi_xs/inte_phi\n",
-    "    print(norm_ave_xs)"
+    "    #print(norm_ave_xs)\n",
+    "    normxs.append(norm_ave_xs)\n",
+    "normxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['.ipynb_checkpoints',\n",
+       "  'Al_na.xlsx',\n",
+       "  'In_n2n.xlsx',\n",
+       "  'In_np.xlsx',\n",
+       "  'Ni_np.xlsx',\n",
+       "  'Y_n2n.xlsx',\n",
+       "  'Y_n3n.xlsx',\n",
+       "  'Zr_n2n.xlsx',\n",
+       "  'Zr_n3n.xlsx'],\n",
+       " [0.06452816485039338,\n",
+       "  905.2665857838962,\n",
+       "  9.803737690221416,\n",
+       "  0.32245999311658796,\n",
+       "  0.9913410944182741,\n",
+       "  48.40257300524878,\n",
+       "  0.9031797429032478,\n",
+       "  31.025039302854324]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[filelist,normxs]"
    ]
   },
   {
